examples/rds/1.36.0/submodules/db_option_group/README.md
# aws_db_option_group

<!-- BEGINNING OF PRE-COMMIT-TERRAFORM DOCS HOOK -->
## Inputs

| Name | Description | Type | Default | Required |
|------|-------------|:----:|:-----:|:-----:|
| create | Whether to create this resource or not? | string | `"true"` | no |
| engine\_name | Specifies the name of the engine that this option group should be associated with | string | n/a | yes |
| identifier | The identifier of the resource | string | n/a | yes |
| major\_engine\_version | Specifies the major version of the engine that this option group should be associated with | string | n/a | yes |
| name\_prefix | Creates a unique name beginning with the specified prefix | string | n/a | yes |
| option\_group\_description | The description of the option group | string | `""` | no |
| options | A list of Options to apply | list | `[]` | no |
| tags | A mapping of tags to assign to the resource | map | `{}` | no |
| timeouts | Define maximum timeout for deletion of `aws\_db\_option\_group` resource | map | `{ "delete": "15m" }` | no |

## Outputs

| Name | Description |
|------|-------------|
| this\_db\_option\_group\_arn | The ARN of the db option group |
| this\_db\_option\_group\_id | The db option group id |

<!-- END OF PRE-COMMIT-TERRAFORM DOCS HOOK -->

